<resources>
    <string name="app_name">Baybayin</string>
    <string name="kasaysayan_ng_wikang_pambansa">Sa unang bahagi ng araling ito ay natutuhan mo an gang iba’t ibang teoryang nagtangkang ipaliwanag ang pinagmulan ng wika. Ngayon naman ay malalaman natin ang pinagmulan ng wikang pambansa. Maraming tanong ang sasagutin ng paglalahad ng kasaysayang ito.Bago pa man ito itinalaga bilang wikang pambansa ay marami na rin itong pinagdaanan. Ating alamin ang kasaysayan ng wikang pambansa.</string>
    <string name="panahon">Sadyang nagging isang malaking palaisipan para sa mga siyentipiko at antropologo kung paano umusbong o saan nagmula ang mga taong unang nanirhan sa Pilipinas. Maraming alamat at teorya ang nabuo patungkol sa tunay na pinagmulan ng lahing Pilipino. Narito ang ilan sa mga ito.</string>
    <string name="panahon_ng_katutubo">Panahon ng Katutubo</string>
    <string name="numberOne">-tinagurian din itong wave migration theory na pinasikat ni Dr. Henry Otley Beyer, isang Amerikanong antropologo noong 1916. -naniniwala siya na may 3 pangkat ng taong dumating sa Pilipinas na pinagmulan ng lahing Pilipino at ito ay ang mga grupo ng Negrito, Indones at Malay.</string>
    <string name="drfox">Dr. Robert Fox –nagpabulaanan sa teorya ni Beyer dahil sa mga natagpuang bungo at isang buto ng panga sa yungib ng Tabon Palawan noong 1962. Ang mg labing nahukay ay patunay na may mas unang dumating sa Pilipinas kaysa sa Malaysia na sinasabing siyang pinanggalingan ng mga Pilipino. -Taong Tabon ang itinawag dito at tinatayang mga 50,000 taon na ang tanda nito. Kasama sa nahukay ang ilang kagamitan tuald ng chertz, isang uri ng quartz.buto ng ibon at paniki na nagpapatunay na nabuhay ang mga taong ito sa pagkuha ng pagkain sa kapaligiran at ang bakas ng ng mga uling ay katibayan ng kaalaman sa pagluluto Dr.Armand Mijares \n– natagpuan niya ang isa pangbuto ng sinasbing mas matanda kaysa taong Tabon na natagpuan sa Kuweba ng Callao. Tinawag itong Taong Callao na sinasabing nabuhay 67,000 taon na ang nakalilipas.</string>
    <string name="_1_teorya_ng_pandrayuhan">1.Teorya ng Pandarayuhan</string>
    <string name="isla">Pinaniniwalaan sa teoryang ito na ang mga Pilipino ay nagmula sa lahing Austronesyano. Ang Austronesian ay hinango sa salitang Latin na auster na nangangahulugang “south wind” at neros na ang ibig sabihin ay “isla”.</string>
    <string name="ayonkay">Ayon kay William Solheim II, Ama ng Arkeolohiya ng Timog Silangang Asya Ang mga Austronesian ay nagmula sa Sulu at Celebes na tinatawag na Nusantao. \nAyon naman kay Peter Bellwood ang Astronesian ay nagmula sa Timog Tsina at Taiwan na nagtungo sa Pilipina noong 5,000 BC. Anuman ang totoo sa dalawang teoryang ito, isa lang tiyak na ang mga Pilipino ang pinakaunang Austronesian. At batay sa mga pag-aaral ang mga sinaunang taong ito ang nagpaunlad ng pagtatanim ng palay at ng rice terracing. Naniniwala rin sila sa anitong naglalakbay sa kabilang buhay gayundin ng paglilibing sa mga patay sa banga tulad ng natagpuan sa Manunggul Cave sa Palawan.Gayundin mahihinuha na may na sila ay may sariling wikang ginagamit at napatunayang marunong bumasa’t magsulat ang mga katutubo. May sinusunod din silang pamamaraan ng pagsulat na tinatawag na baybayin.</string>
    <string name="angbaybayin">Ang baybayin ay binubuo ng ng labimpitong titik-tatlong patinig at labing-apat na katinig. Binibigkas ang katinig na may kasamang tunog na patinig na /a/. Kung ang patinig ay bibigkasin ng may kasamang patinig na /e/ o /i/ nilalagyan ang titik ng tuldok sa itaas , samantalang tuldok sa ibaba naman kung nais isama ay /o/o /u/.</string>
    <string name="_2_teorya_ng_pandarayuhan_mula_sa_rehiyong_autronesyano">2.Teorya ng Pandarayuhan Mula sa Rehiyong Autronesyano</string>
    <string name="baybayin_application">Ang aplikasyon ng Baybayin ay maaaring gamitin ng bawat indibidwal sa lahat ng edad at antas ng kasanayan mula sa mga baguhan na nagsisimula pa lamang matuto ng baybayin hanggang sa mga may karanasan at ediya na nais mapaghusayan at mapalawak ang kaalaman sa pagsusulat ng baybayin. Ang aplikasyon na ito ay naglalaman ng mga kasaysayan, gabay sa pagsusulat at mga pagsusulit tungkol sa baybayin na tumutulong sa gumagamit ng aplikasyon na madaling maunawaan lalo na para sa mga nagsisimulang matuto ng baybayin upang higit na mapahusay ang kanilang kaalaman tungkol sa baybayin.</string>
    <string name="goal">Layunin</string>
    <string name="goals">Ang layunin ng aplikasyon na ito ay upang mapanatili at itaguyod ang sinaunang sulat ng mga filipino sa pamamagitan ng pag-aaral at paggamit ng aplikasyon na baybayin na maaaring maiambag ng bawat gumagamit nito, sa pangangalaga ng sinaunang pagsulat ng tagalog at makatulong na panatilihin itong makilala para sa mga susunod na henerasyon.</string>

    <string name="baybayin">ᜉᜒᜎᜒᜉᜒᜈᜐ᜔</string>
</resources>