<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bgpic"
    tools:context=".MainPage">

    <!-- Dark Overlay -->
    <View
        android:id="@+id/darkOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="#80000000" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/_20sdp">

                <RelativeLayout
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:src="@drawable/logolarge"
                        android:scaleType="fitXY"
                        android:id="@+id/logo"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/app_name"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/logo"
                        android:layout_alignTop="@id/logo"
                        android:layout_alignBottom="@id/logo"
                        android:layout_alignParentEnd="true"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="Pangkalahatang ideya"
                            android:textColor="@color/wht"
                            android:textSize="@dimen/_13ssp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/tagalogstylized"
                            android:textColor="#FF5E5E"
                            android:textAlignment="center"
                            android:text="oᜊᜒᜍ᜔ᜊᜒᜁᜏ᜔"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/baybayin_application"
                    android:justificationMode="inter_word"
                    android:textColor="@color/wht"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/goal"
                    android:textColor="@color/wht"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:justificationMode="inter_word"
                    android:text="@string/goals"
                    android:textColor="@color/wht"
                    android:textSize="@dimen/_12ssp" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="@dimen/_170sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:backgroundTint="#E23744"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:text="Simulan"
                    android:textColor="@color/wht"
                    android:textSize="@dimen/_10ssp"
                    android:textAllCaps="false"
                    android:fontFamily="@font/poppins_bold"
                    app:cornerRadius="@dimen/_20sdp"
                    android:id="@+id/getStartedBtn"/>

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>